# sof

./: Kconfig.sof  west.yml
.github/workflows/: zephyr.yml
actions/zephyr-docker-build/: action.yml
app/: CMakeLists.txt
app/boards/: intel_adsp_ace15_mtpm.conf
scripts/: xtensa-build-zephyr.py
scripts/cmake/: rimage.cmake  west-dependency-provider.cmake
src/audio/: component.c
src/audio/pipeline/: pipeline-params.c  pipeline-schedule.c
src/debug/: CMakeLists.txt
src/debug/perf/: CMakeLists.txt  mcps_profiler.c
src/idc/: idc.c
src/include/sof/audio/: component.h  component_ext.h  pipeline.h
src/include/sof/debug/perf/: mcps_profiler.h
src/include/sof/ipc/: common.h
src/include/sof/schedule/: dp_schedule.h  schedule.h
src/init/: init.c
src/ipc/: ipc-common.c  ipc-zephyr.c
src/ipc/ipc4/: handler.c  helper.c
src/platform/intel/ace/: platform.c
src/schedule/: zephyr_ll.c
tools/tplg_parser/: pipeline.c
zephyr/: CMakeLists.txt  dp_schedule.c
